# shuttlings-cch24

./: .gitignore  Cargo.toml  flake.nix
.sqlx/: query-090f9657c1080e3c65eafbd0261ee88f1f8a0faa879fd203b1c97782c790c06b.json  query-8f26ea15e21f084fc34e3395a2644047aefd4b63fc25fbda5f3706572f092472.json  query-c3c72bb6489000f201b396dfcbcddbbfc3baaf7c6721d8bb26d95f53141500af.json  query-f3b90dc277e772414b4a8218a464a7cba20ea533795da7a7910cf80873bfe370.json
assets/: 23.html
src/: connect4.rs  day0.rs  day12.rs  day16.rs  day19.rs  day2.rs  day23.rs  day5.rs  day9.rs  main.rs
src/day12/: connect4.rs
