[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-manifest = "0.17.0"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
leaky-bucket = "1.1.2"
poem = "3.0.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
shuttle-poem = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.26.0"
