[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-manifest = "0.17.0"
chrono = "0.4.39"
html-escape = "0.2.13"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
leaky-bucket = "1.1.2"
poem = { version = "3.0.0", features = ["static-files"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shuttle-poem = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "uuid"] }
tokio = "1.26.0"
toml = "0.8.19"
uuid = "1.11.0"
